@@ -1,22 +1,24 @@
 package com.smartfactory.predictive.backend.service;
 
-import com.smartfactory.predictive.backend.dto.DashboardSummaryDto;
-import com.smartfactory.predictive.backend.dto.LineStatusResponseDto; // DTO 추가
+import com.smartfactory.predictive.backend.domain.entity.Device;
+import com.smartfactory.predictive.backend.domain.entity.ProductionLine;
 import com.smartfactory.predictive.backend.domain.enums.DeviceStatus;
-import com.smartfactory.predictive.backend.repository.ProductionLineRepository; // Repository 추가
+import com.smartfactory.predictive.backend.dto.DashboardSummaryDto;
+import com.smartfactory.predictive.backend.dto.LineStatusResponseDto;
+import com.smartfactory.predictive.backend.repository.DeviceRepository;
+import com.smartfactory.predictive.backend.repository.ProductionLineRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import com.smartfactory.predictive.backend.repository.DeviceRepository;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class DashboardService {
 
     private final DeviceRepository deviceRepository;
-    private final ProductionLineRepository lineRepository; // 1. 라인 레포지토리 주입
+    private final ProductionLineRepository lineRepository;
 
     @Transactional(readOnly = true)
     public DashboardSummaryDto getDashboardSummary() {
@@ -28,27 +30,63 @@ public class DashboardService {
         return new DashboardSummaryDto(running, stopped, maintenance, total);
     }
 
-    // 2. 새로운 MVP 기능: 라인별 가동 현황 조회
     @Transactional(readOnly = true)
     public List<LineStatusResponseDto> getLineStatus(String fabId) {
-        // 모든 라인을 가져온 뒤, 요청받은 Fab(A 또는 B)에 속한 라인만 필터링합니다.
-        return lineRepository.findAll().stream()
-                .filter(line -> line.getFabId().equals(fabId))
+        List<ProductionLine> lines = lineRepository.findByFabId(fabId);
+
+        return lines.stream()
                 .map(line -> {
-                    // 해당 라인에 소속된 장비들을 찾아 DTO로 변환합니다.
-                    List<LineStatusResponseDto.DeviceSummaryDto> devices = deviceRepository.findAll().stream()
-                            .filter(d -> d.getLineId().equals(line.getLineId()))
-                            .map(d -> new LineStatusResponseDto.DeviceSummaryDto(d.getDeviceId(), d.getStatus().name()))
-                            .collect(Collectors.toList());
+                    List<Device> lineDevices = deviceRepository.findByLineId(line.getLineId());
 
-                    // 화면 우측 상단에 표시될 요약 텍스트를 만듭니다.
-                    String summary = String.format("가동 %d / 정지 %d / 정비 %d",
-                            devices.stream().filter(d -> d.getStatus().equals("RUNNING")).count(),
-                            devices.stream().filter(d -> d.getStatus().equals("STOPPED")).count(),
-                            devices.stream().filter(d -> d.getStatus().equals("MAINTENANCE")).count());
+                    long runningCount = lineDevices.stream()
+                            .filter(device -> device.getStatus() == DeviceStatus.RUNNING)
+                            .count();
 
-                    return new LineStatusResponseDto(line.getLineId(), line.getDeviceType().name(), summary, devices);
+                    long stoppedCount = lineDevices.stream()
+                            .filter(device -> device.getStatus() == DeviceStatus.STOPPED)
+                            .count();
+
+                    long maintenanceCount = lineDevices.stream()
+                            .filter(device -> device.getStatus() == DeviceStatus.MAINTENANCE)
+                            .count();
+
+                    // 🔥 핵심: DB값이 아니라 실제 장비 수 사용
+                    int totalSlots = lineDevices.size();
+
+                    int minRunning = line.getMinRunning() != null ? line.getMinRunning() : 0;
+
+                    // 안전장치 (추천)
+                    if (minRunning > totalSlots) {
+                        minRunning = totalSlots;
+                    }
+
+                    List<LineStatusResponseDto.DeviceSummaryDto> devices =
+                            lineDevices.stream()
+                                    .map(device -> new LineStatusResponseDto.DeviceSummaryDto(
+                                            device.getDeviceId(),
+                                            device.getStatus().name()
+                                    ))
+                                    .toList();
+
+                    String summaryStatus = String.format(
+                            "가동 %d / 정지 %d / 정비 %d",
+                            runningCount,
+                            stoppedCount,
+                            maintenanceCount
+                    );
+
+                    return new LineStatusResponseDto(
+                            line.getLineId(),
+                            line.getDeviceType().name(),
+                            totalSlots,
+                            minRunning,
+                            runningCount,
+                            stoppedCount,
+                            maintenanceCount,
+                            summaryStatus,
+                            devices
+                    );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
